# aidbox-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Readme.md  USAGE.md  aidbox.ts  exclude-config.json  index.html  index.md  install.sh  nodemon.json  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  checks.yaml  chore.yml  ci.yaml  clippy.yaml  codeql-analysis.yml  create-release.yml  docs.yaml  pr.yaml  rustfmt.yaml
aidbox-cli/: Cargo.toml  Makefile
aidbox-cli/src/: devbox.rs  main.rs  types.rs
aidbox-cli/src/types/: box.rs  cache.rs  generate.rs  mod.rs  reader.rs
core/aidbox/: Cargo.toml
core/aidbox/src/: lib.rs
core/common/: Cargo.toml
core/common/src/: lib.rs
core/config/: Cargo.toml
core/config/src/: lib.rs
core/generator/: Cargo.toml
core/generator/src/: lib.rs
core/generator/src/cache/: mod.rs
core/generator/src/common/: mod.rs
core/generator/src/helpers/: mod.rs
core/generator/src/reader/: mod.rs
core/generator/src/types/typescript/: mod.rs
docs/: .gitignore  .prettierrc  package.json  pnpm-lock.yaml
docs/docs/: backlog.md  index.md
docs/docs/.vitepress/: config.js
examples/typescript/: package.json  pnpm-lock.yaml  retreive-patient.ts
examples/typescript/configs/eslint/: common.js
lib/: box.ts  cache.ts  cli.ts  logger.ts  reader.ts  types.ts  writer.ts
npm/: package.json  pnpm-lock.yaml
npm/lib/: download.js  index.d.ts  index.js  install.js  postinstall.js
obsolete_typescript/: .eslintignore  .eslintrc.js  .prettierrc.js  nodemon.json
obsolete_typescript/.github/workflows/: chore.yml  create-release.yml
obsolete_typescript/lib/: helpers.ts  merge.ts  types.ts  writer.ts
obsolete_typescript/tests/: cache.ts
src/: config.rs  devbox.rs  docker.rs  main.rs  self_update.rs
src/aidbox/: matches.rs  mod.rs
src/box/: matches.rs  mod.rs  requests.rs
src/generator/: cache.rs  common.rs  helpers.rs  mod.rs  reader.rs
src/generator/sample/: mod.rs
src/generator/types/: generate.rs  mod.rs  typescript.rs  writer.rs
src/md/: mod.rs
src/types/: box.rs  cache.rs  generate.rs  helpers.rs  mod.rs  reader.rs  writer.rs
src/ui/: app.rs  front.rs  mod.rs
src/verbosity/: mod.rs
tests/: box.ts  helpers.ts  merge.ts  reader.ts
ui/: dprint.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: application.css  application.tsx  main.tsx  model.ts  routes.ts
ui/src/components/navbar/: index.css  index.tsx
ui/src/icons/: left-arrow.tsx
