[package]
name = "aidbox"
version = "0.3.0"
edition = "2021"
authors = ["Alex Streltsov <funyloony@gmail.com>" , "Mikhail Medveded <medvedevmichel@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/octoshikari/aidbox-cli"
repository = "https://github.com/octoshikari/aidbox-cli"
readme = "README.md"
keywords = ["cli", "aidbox"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
clap = {version="3.1.18", features= ["cargo", "wrap_help"]}
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0" }
serde_json = "1.0.80"
chrono = "0.4.19"
reqwest = { version = "0.11.10", features = ["json"] }
bollard = "0.12"
tokio = {version = "1.18.2", features = ["rt", "macros", "rt-multi-thread"]}
exitcode = "1.1.2"
futures = "0.3.21"
futures-core = "0.3"
futures-util = "0.3.21"
regex = "1.5.5"
indicatif = "0.17.0-rc.10"
async-recursion = "1.0.0"
dprint-development = "0.9.1"
dprint-plugin-typescript = "0.68.2"
dprint-core = "0.57.0"
dirs = "4.0.0"
dialoguer = "0.10"
human-panic = "1.0.3"
pulldown-cmark = "0.9.1"
pulldown-cmark-to-cmark = "10.0.1"
clap_complete = "3.1.4"

[dev-dependencies]
proptest = "1.0.0"