[package]
name = "aidbox-cli"
version = "0.4.1"
edition = "2021"
authors = ["Alex Streltsov <funyloony@gmail.com>" , "Mikhail Medveded <medvedevmichel@gmail.com>", "Gena Razmakhnin <gena.razmakhnin@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/octoshikari/aidbox-cli"
repository = "https://github.com/octoshikari/aidbox-cli"
readme = "README.md"
keywords = ["cli", "aidbox"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
clap = {version="3", features= ["cargo", "wrap_help"]}
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0" }
serde_json = "1"
chrono = { version = "0.4.19", features= ["serde"]}
reqwest = { version = "0.11.11", features = ["json"] }
bollard = "0.13"
tokio = {version = "1", features = ["rt", "macros", "rt-multi-thread"]}
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
regex = "1.5"
indicatif = "0.17.0-rc.11"
async-recursion = "1"
dprint-development = "0.9"
dprint-plugin-typescript = "0.69"
dprint-core = "0.58"
dirs = "4"
dialoguer = "0.10"
human-panic = "1"
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "10"
clap_complete = "3.2.1"
console = "0.15"
itertools = "0.10.3"
colorful = "0.2.1"
fake = {version ="2.5", features = ["chrono"]}
rand = "0.8"
webbrowser = "0.7.1"

[dev-dependencies]
proptest = "1.0.0"