[package]
name = "aidbox-cli"
version = "0.1.0"
edition = "2021"
authors = ["Alex Streltsov <funyloony@gmail.com>"]

[dependencies]
clap = { version = "3", features = ["derive"] }
log = "0.4.16"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
reqwest = { version = "0.11.10", features = ["blocking","json"] }
bollard = "0.12"
tokio = "1"
exitcode = "1.1.2"
which = "4.2.5"