[package]
name = "aidbox-cli"
version = "0.1.0"
edition = "2021"
authors = ["Alex Streltsov <funyloony@gmail.com>"]

[dependencies]
clap = "3.1.14"
log = "0.4.16"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
reqwest = { version = "0.11.10", features = ["json"] }
bollard = "0.12"
tokio = "1"
exitcode = "1.1.2"
futures = "0.3.21"
futures-core = "0.3"
futures-util = "0.3.21"
